# planner

./: README  autogen.sh  configure.ac  planner.doap
docs/libplanner/: Makefile.am  libplanner-docs.xml  libplanner-sections.txt  libplanner.types
libplanner/: mrp-application.c  mrp-application.h  mrp-assignment.c  mrp-assignment.h  mrp-calendar.c  mrp-calendar.h  mrp-day.c  mrp-day.h  mrp-error.c  mrp-error.h  mrp-group.c  mrp-group.h  mrp-object.c  mrp-object.h  mrp-parser.c  mrp-private.h  mrp-project.c  mrp-project.h  mrp-property.c  mrp-property.h  mrp-relation.c  mrp-relation.h  mrp-resource.c  mrp-resource.h  mrp-sql.c  mrp-task.c  mrp-task.h  mrp-time.c  mrp-time.h  mrp-types.c  mrp-types.h
po/: ca.po  eo.po  gl.po  hr.po  ja.po  nl.po  pt_BR.po  uk.po  zh_CN.po
src/: planner-popup-button.c  planner-task-date-widget.c  planner-task-view.c
